sumo/tests/duarouter/alternatives/style1_input/errors/routealt/routealt_last_false/alts.duarouter
<?xml version="1.0"?>

<!-- generated on 07/21/09 11:26:42 by SUMO duarouter Version dev-SVN-r7459
<configuration>

    <input
        net-file="input_net.net.xml"
        alternatives="input_alts.rou.alt.xml"
    />

    <output
        output-file="routes.rou.xml"
    />

</configuration>
-->

<route-alternatives>
   <vtype model="SUMO_KRAUSS" id="KRAUSS_DEFAULT" accel="2.60" decel="4.50" sigma="0.50" length="5.00" maxspeed="70.00" tau="1.00" color="1,1,0"/>
   <vehicle id="0" type="KRAUSS_DEFAULT" depart="0">
      <routeDistribution last="0">
         <route cost="125.11" probability="1.00" edges="beg middle end rend"/>
      </routeDistribution>
   </vehicle>
</route-alternatives>
